CSS - fix scrollbars

--- a/packages/container-app/src/styles/styles.less
+++ b/packages/container-app/src/styles/styles.less
@@ -21,6 +21,31 @@ a {
   text-decoration: underline;
 }
 
+*::-webkit-scrollbar {
+  width: 15px;
+}
+*::-webkit-scrollbar:horizontal {
+  height: 15px;
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border: solid 4px #fff;
+  border-color: transparent;
+  border-radius: 7px;
+  background-clip: padding-box;
+  background-color: rgba(255, 255, 255, 0.25); 
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5); 
+}
+
+
+
+
+
+
 input {
   margin: 4px;
   padding: 4px;
