--- a/packages/micro-components/src/styles/micro-app.less
+++ b/packages/micro-components/src/styles/micro-app.less
@@ -5,6 +5,37 @@ body {
   color: #ccc;
 }
 
+a {
+  color: #aaa;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+*::-webkit-scrollbar {
+  width: 15px;
+}
+*::-webkit-scrollbar:horizontal {
+  height: 15px;
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border: solid 4px #fff;
+  border-color: transparent;
+  border-radius: 7px;
+  background-clip: padding-box;
+  background-color: rgba(255, 255, 255, 0.25); 
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5); 
+}
+
+
+
+
+
+
 .micro-app-router {
   position: absolute;
   width: 100%;
